--- a/server/services/Templates/activation.email.ejs
+++ b/server/services/Templates/activation.email.ejs
@@ -3,7 +3,7 @@
         <td><img src="<%= logo %>" /> </td>
     </tr>
     <tr style="border-bottom: 2px solid #377499;">
-        <td><h4>مرحبا</h4></td><td><h4><%= user.name %> </h4></td>
+        <td><h4>مرحبا</h4></td><td><h4><%= name %> </h4></td>
     </tr>
     <tr>
         <td>سعيدين جدا بتسجيلك معنا في جبنة وبيض</td>
@@ -12,6 +12,6 @@
         <td>محتاجين تأكيد ايميلك عن طريق الرابط التالي:</td>
     </tr>
     <tr>
-        <td><a href="<%= user.activation_link %>" target="_blank">هنا</a> </td>
+        <td><a href="<%= activation_link %>" target="_blank">هنا</a> </td>
     </tr>
 </table>
