fixed client model

--- a/server/services/Templates/activation.email.ejs
+++ b/server/services/Templates/activation.email.ejs
@@ -1,6 +1,6 @@
-<table>
+<table style="direction: rtl;">
     <tr>
-        <td><img src="<%= logo %>" /> </td>
+        <td><img src="https://jubnawebaith.com/wp-content/uploads/2020/05/final-logo.png" /> </td>
     </tr>
     <tr style="border-bottom: 2px solid #377499;">
         <td><h4>مرحبا</h4></td><td><h4><%= name %> </h4></td>
